# Juggluco

./: .gitignore  Makefile  README.md  addgit.sh  alles.txt  backup.txt  build.gradle  build.gradle.bak4  build.gradle.werktniet  debug.sh  dirs.0  dirs.lines  get_sensor_so_files  gradle.properties  gradle.properties.bak  gradlew  html  index.html  local.properties  makeapk.sh  mkgit.sh  nohup.out  over.sh  settings.gradle  settings.gradle.bak  tasks.txt
Common/: build.gradle  everyone.keystore  proguard-rules.my  proguard-rules.my.bak  proguard-rules.pro  proguard-rules.pro.zonder
Common/src/: smallSi
Common/src/main/: AndroidManifest.xml  AndroidManifest.xml.bak  AndroidManifest.xml.goed  AndroidManifest.xml.predoze  AndroidManifest.xml.res12  AndroidManifest.xml.resize  aapt.txt  unzipper.sh
Common/src/main/cpp/: .numupdate.txt.swp  BUGS.txt  CMakeLists.txt  CMakeLists.txt.cali  CMakeLists.txt.cmd  CMakeLists.txt.new  CMakeStart.txt  EverSense.cpp  EverSense.hpp  Makefile  Makefile.bak  Makefile2  README  SensorGlucoseData.h  SensorGlucoseData.h.bak  SensorGlucoseData.hpp  abbott.c  abbotttest.cpp  acceptret.txt  access.h  access.trdpx.h  access.txt  access2.h  addlicense.sh  addlicense.sh.bak  alg.h  all.txt  all2.txt  alles.h  allfiles.txt  allwrong.cpp  allwrong.h  armcallstr.h  armmax.h  assemplydebug.txt  assignweg.grep  assignweg.sh  backup.txt  backupjava.cpp  binhead.sh  (+202 more)
Common/src/main/cpp/LibAscon/: .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  compiler_flags.cmake
Common/src/main/cpp/LibAscon/inc/: ascon.h
Common/src/main/cpp/LibAscon/src/: ascon_aead128.c  ascon_aead128a.c  ascon_aead80pq.c  ascon_aead_common.c  ascon_buffering.c  ascon_hash.c  ascon_internal.h  ascon_permutations.c
Common/src/main/cpp/bcrypt/: Makefile  aes_encrypt.d  bcrypt.cpp  bcrypt.d  ccm_mode.d
Common/src/main/cpp/cmdline/: .jugglucrc  alarm.cpp  jugglucotext.h  logs.h  main.cpp  make.sh  version.h
Common/src/main/cpp/curve/: Makefile  bejugglucotext.cpp  bino.h  curve.cpp  curve.h  curve.hpp  dejugglucotext.cpp  dejugglucotext.cpp.bak  dejugglucotext.cpp.txt  dejugglucotext.cpp3.txt  dejugglucotext2.cpp.txt  dejugglucotext2.txt  dejugglucotext4.txt  dejugglucotextbak  displayer.h  esjugglucotext.cpp  exports.cpp  fonts.h  frjugglucotext.cpp  indicators.txt  itjugglucotext.cpp  iwjugglucotext.cpp  javacurve.cpp  jugglucotext.cpp  jugglucotext.h  jugglucotext.hpp  nljugglucotext.cpp  numdisplay.h  numdisplay.hpp  numdisplayfuncs.h  numdisplayfuncs.hpp  numhit.h  numhit.hpp  numiter.h  numiter.hpp  oldest.h  oldest.hpp  percentile.cpp  percentiles.html  pljugglucotext.cpp  (+13 more)
Common/src/main/cpp/foods/: Makefile  bin2byte  database.cpp  database.h  database.hpp  division.h  division.hpp  fooddata.h  grouptype.hpp  javabase.cpp  search.h  search.hpp  showcomps.cpp
Common/src/main/cpp/libre3/: bluetooth.cpp  hexstr.h  int.txt  intDecrypt.txt  libbcrl_dp.txt  liblibre3extension.txt  loadlibs.cpp  nfc.cpp  nohup.out  return.txt  sub  sub.cpp  testlog  testlog.cpp  testrequest  testrequest.cpp  unprotect.h  updatelife.txt
Common/src/main/cpp/meal/: Makefile  Meal.h  Meal.hpp  MealSave.h  Meals2.html  TODO.txt  meal.txt  mealjava.cpp  mealoffset  mealoffset.cpp  mealoffset.glu  savemeals.cpp  starthtml
Common/src/main/cpp/net/: Makefile  TODO.txt  aligner.h  backup.cpp  backup.h  backup.h.opensender  backup.hpp  comtypes.h  comtypes.hpp  crypt.h  getcommand.cpp  magic.h  makerandom.h  makerandom.hpp  misc.h  mkdirs.hpp  myip.cpp  netstuff.cpp  netstuff.h  netstuff.hpp  passhost.h  passhost.hpp  receive.h  receive.hpp  receivemagic  receivemagic.h  sendcommands.cpp  sender.cpp  sender.cpp.bak  sender.cpp.opensender  sendmagic  sendmagic.h  sendmagicinit.h  sendonce.cpp  stream.txt
Common/src/main/cpp/nums/: libreids.h  nohup.out  num.h  numdata.cpp  numdata.h  numdata.hpp  numjava.cpp
Common/src/main/cpp/settings/: Makefile  appcolor.h  arraystr.h  broadcasts.h  cmdlinecolor.h  countryunits.h  countryunits.hpp  errnos.txt  exception.cpp  getcountry.cpp  javasettings.cpp  mixpass.h  mixpass.hpp  mmol.txt  novopens.hpp  oldsettings.h  oldsettings.hpp  painlessguide.txt  settings.cpp  settings.h  settings.h.bak  settings.hpp  settingsvariables.txt  unit.txt
Common/src/main/cpp/share/: Makefile  destruct.h  fromjava.h  getsockets.cpp  hex.h  hexstr.h  hexstr.hpp  hooks.cpp  hooks.cpp.bak  logs.cpp  logs.h  nfcdata.cpp  nfcdata.hpp  savehistory.cpp  serial  serial.cpp  serial.h  serial.hpp  sysnums-arm.h  sysnums-arm64.h  sysnums.h  timestr.cpp  timestr.h
Common/src/main/cpp/sibionics/: AlgorithmContext.hpp  SiContext.hpp  jnifuncs.h  json.hpp  makeWriteCharacter.cpp  process.cpp  start.cpp
Common/src/main/cpp/used/: accessused  makehead.sh  openused  statused  usaccess.h  used.tar  usopen.h  usstat.h
Common/src/main/cpp/watch/: BUGS  messages.cpp  netinfo.cpp  nohup.out  test.txt  test2.txt  testinfo  testinfo.cpp  (+1 more)
Common/src/main/res/: ic_launcher.tar  mkander.sh  nohup.out  plstrings.xml.bak  replace.sh
Common/src/mobile/: AndroidManifest.xml  AndroidManifest.xml.33  AndroidManifest.xml.bak  AndroidManifest.xml.convchange  AndroidManifest.xml.debug  AndroidManifest.xml.pre33  AndroidManifest.xml.release
Common/src/mobile/java/: nohup.out  oldtarmin.tar
Common/src/mobileSi/: AndroidManifest.xml
Common/src/si/: AndroidManifest.xml
Common/src/small/: AndroidManifest.xml
Common/src/small/java/: com
Common/src/small/res/: bluesensor.xml  drawable-280dpi  drawable-hdpi  drawable-mdpi  drawable-nodpi  mipmap-anydpi-v26  mipmap-hdpi  mipmap-mdpi  mipmap-xhdpi  mipmap-xxhdpi  mipmap-xxxhdpi  values-be  values-de  values-fr  values-nl  values-pl  values-uk
Common/src/wear/: AndroidManifest.xml  AndroidManifest.xml.33  AndroidManifest.xml.bak  AndroidManifest.xml.debug  AndroidManifest.xml.preflash  AndroidManifest.xml.release  dirs.sh  nohup.out
Common/src/wear/res/: rename.sh  watch_face_and_complications_preview.xml.checkbox
Common/src/wearSi/: AndroidManifest.xml  jniLibs
gradle/wrapper/: gradle-wrapper.properties
(+434 files in other folders)
